--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 # production
 /build
 /backups
+/plaza
+
 # debug
 npm-debug.log*
 yarn-debug.log*
@@ -18,9 +20,16 @@ yarn-error.log*
 
 # env files
 .env*
+!.env.example
+.dev.vars
 
 # vercel
 .vercel
+
+# cloudflare
+.wrangler/
+.dev.vars
+worker-configuration.d.ts
 
 # typescript
 *.tsbuildinfo
