--- a/wrangler.toml.template
+++ b/wrangler.toml.template
@@ -5,15 +5,15 @@ pages_build_output_dir = ".vercel/output/static"
 # KV 命名空间绑定
 [[kv_namespaces]]
 binding = "BOOKMARKS_KV"
-id = "07f3d32d52444f88a4968ee2b1607b63"  # 需要在 Cloudflare dashboard 创建后替换
+id = "Cloudflare dashboard 创建后替换"  # 需要在 Cloudflare dashboard 创建后替换
 
 [[kv_namespaces]]
 binding = "PLAZA_KV"
-id = "7e9189ff5b244201ae7adc8d8ebaf7a6"  # 需要在 Cloudflare dashboard 创建后替换
+id = "Cloudflare dashboard 创建后替换"  # 需要在 Cloudflare dashboard 创建后替换
 
 [[kv_namespaces]]
 binding = "SCREENSHOT_KV"
-id = "352004f1be8148af84c0b0b8efa6ab3b" # 需要在 Cloudflare dashboard 创建后替换
+id = "Cloudflare dashboard 创建后替换" # 需要在 Cloudflare dashboard 创建后替换
 # 环境变量
 [vars]
 ENVIRONMENT = "production"
@@ -24,15 +24,15 @@ name = "bookmark-manager-preview"
 
 [[env.preview.kv_namespaces]]
 binding = "BOOKMARKS_KV"
-id = "578502ff274641c2923f6a64a3c74c11"
+id = "Cloudflare dashboard 创建后替换"
 
 [[env.preview.kv_namespaces]]
 binding = "PLAZA_KV"
-id = "c7aa590b6c754d1ba74ff1cc21b11e0d"
+id = "Cloudflare dashboard 创建后替换"
 
 [[env.preview.kv_namespaces]]
 binding = "SCREENSHOT_KV"
-id = "b44983207afe476da5991d0f1916e5b4" # 需要在 Cloudflare dashboard 创建后替换
+id = "Cloudflare dashboard 创建后替换" # 需要在 Cloudflare dashboard 创建后替换
 
 
 # Production 环境配置（可选）
